--- a/gb/16/4/3/n7518018.md
+++ b/gb/16/4/3/n7518018.md
@@ -1,49 +1,47 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>奥地利人观神韵感叹和中国是“亲戚”</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2016/04/1604031444321973-600x400.jpg" />
 <h6>Wolfgang Kirsch与太太观赏了美国神韵国际艺术团2016年4月3日在奥地利萨尔兹堡的第二场演出。（Peter Sanftmann／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2016年04月04日讯】（大纪元记者Peter Sanftmann奥地利萨尔兹堡报导）美国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>国际艺术团2016年4月3日在奥地利萨尔兹堡的第二场演出在观众们的热烈掌声中落幕。Wolfgang Kirsch与太太ElizabethKirsch带着愉快的心情走出大节庆剧院演出厅。</p>
-<p>Kirsch太太说：“节目非常好，我一直盯着<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>看，舞蹈演员们那么精确，高度精准无误。”先生也点头说：“舞蹈出神入化，非常棒。”Kirsch先生是Neumarkt一家储蓄所的一位负责人。</p>
+	<p>【大纪元2016年04月04日讯】（大纪元记者Peter Sanftmann奥地利萨尔兹堡报导）美国神韵国际艺术团2016年4月3日在奥地利萨尔兹堡的第二场演出在观众们的热烈掌声中落幕。Wolfgang Kirsch与太太ElizabethKirsch带着愉快的心情走出大节庆剧院演出厅。</p>
+<p>Kirsch太太说：“节目非常好，我一直盯着舞蹈看，舞蹈演员们那么精确，高度精准无误。”先生也点头说：“舞蹈出神入化，非常棒。”Kirsch先生是Neumarkt一家储蓄所的一位负责人。</p>
 <p>看到演出中的人物从天幕中飞来，然后又飞走，夫妻俩都很有感触。太太说：“那些人从天上降下来，然后又飞到天上，我非常喜欢。”先生补充说：“他们飞到远处，飞到天堂里。”太太说：“我们也相信天堂，那些人飞到天上，这一点我非常喜欢。”</p>
-<p>Kirsch太太还说，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>的色彩和编舞令她陶醉，看了演出，她自己也感到“轻盈无比”。</p>
+<p>Kirsch太太还说，神韵的色彩和编舞令她陶醉，看了演出，她自己也感到“轻盈无比”。</p>
 <p>对于神韵，他们觉得有一种似曾相识的感觉，一种认同感。Kirsch先生说：“我觉得是这样的，中国人在这里并不是一个单独的民族的概念，而是与我们一致的民族，中国和我们是一种‘亲戚关系’。”</p>
 <p>责任编辑：岳明</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517858.md#1">奥地利人：神韵不会让中国文化衰落下去</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517865.md#1">红十字会负责人：太激动人心了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517888.md#1">萨尔兹堡修女赞神韵“演出太珍贵了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517892.md#1">“整个演出展示了慈悲”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517945.md#1">德国夫妇奥地利观神韵“被演出迷住了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/3/n7517954.md#1">奥地利州政府官员看神韵 “不忘传统”</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517858.md#1">奥地利人：神韵不会让中国文化衰落下去</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517865.md#1">红十字会负责人：太激动人心了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517888.md#1">萨尔兹堡修女赞神韵“演出太珍贵了”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517892.md#1">“整个演出展示了慈悲”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517945.md#1">德国夫妇奥地利观神韵“被演出迷住了”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/3/n7517954.md#1">奥地利州政府官员看神韵 “不忘传统”</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/8/27/n11480776.md#1" target="_blank">印度中部城市学校师生学炼法轮功</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/1/n11226848.md#1" target="_blank">共产暴政录：越共排华事件</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/2/n14171656.md#1">我们竟然过了一百年的假“春节”？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/6/n14174422.md#1">大马网红晒11年前旧照 同框陌生人竟是丈夫</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/4/n14173543.md#1">【未解之谜】一切皆有定数？预言中的中国未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174106.md#1">围炉过年：从除夕到元日的民俗守护人心中的善</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/1/n14170820.md#1">过年习俗：腊月到正月 22天不重样！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/11/n14178603.md#1">【时事军事】台湾F-16变身蝰蛇 空地通吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177386.md#1">【马克时空】南韩军备成新宠 军品出口全球第四</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176667.md#1">【探索时分】逐帧解析乌克兰无人艇围殴俄军舰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177615.md#1">徐客：许家印案涉高层暗战 传被追问三件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177938.md#1">泛海控股被退市立案 千亿金融帝国崩塌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14178009.md#1">央视春晚魔术再穿帮 刘谦被爆含泪离开舞台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177390.md#1">好莱坞男星最高收入前十名 阿汤哥稳居第一</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176806.md#1">受访称体谅梅西缺阵 港星高海宁遭到攻击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177994.md#1">楚一丁：《繁花》，一场在恐惧中绽放的梦幻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176281.md#1">周末最喜爱的韩剧 《夜晚开的花》位居榜首</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/7/n14175936.md#1">厨房清洁无异味 正确使用小苏打6招必学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/10/n14177614.md#1">恒大玩掉整个中国？美国经济研究所早预见危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/5/n14174251.md#1">童话开始的地方 拍摄新天鹅堡雪景的冒险之旅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/9/n14177356.md#1">不敢吃鸡蛋？资深中医师：吃对反降胆固醇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/8/n14176798.md#1">2024年买车 专家不看好哪些新车</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/3/n7518018.htm">奥地利人观神韵感叹和中国是“亲戚”</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/16/4/3/n7518018.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405472.md#1">辛生得神示 改邪归正得福报</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/1/n14403677.md#1">善恶有报：泯没良心 恶妇当下变动物</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/25/n14421721.md#1">【军事情报局】中共所谓六代机是真六代机吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421579.md#1">【马克时空】川普要如何终止俄乌战争</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421684.md#1">【菁英论坛】川普新政 美国黄金时代是否到来</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420052.md#1">利润暴跌 中国炼化企业掀破产潮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418536.md#1">“儿子没法结婚了” 碧桂园烂尾楼买家陷困境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420134.md#1">赵薇主动公布离婚日期 已清空黄有龙公司股票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420047.md#1">40岁大陆女歌手申烨猝逝 知情者曝死因</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420977.md#1">王宝强加入周润发跑友圈 为角色成功减重30斤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420169.md#1">胡歌获官方披露任新职 大陆明星当官引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420918.md#1">刘晓庆：不知自己真实年龄 感觉自己适合属虎</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421359.md#1">为什么航空公司租轮胎给飞机使用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416694.md#1">孤独增加癌病、失智风险 这样做消除孤独感</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420499.md#1">这7个下班后的习惯 会让你在工作时分心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418374.md#1">头发越来越少怎么办？3茶饮5穴位养发</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415455.md#1">眼霜对抗眼周老化？ 还需另外几招</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/4/3/n7518018.htm">奥地利人观神韵感叹和中国是“亲戚”</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/16/4/3/n7518018.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
